# deep-collaborative-learning

./: README.md  pyproject.toml
dcl/: __init__.py  gates.py  graph.py  trainer.py
dcl/dataset/cifar_datasets/: cifar10.py  cifar100.py
dcl/utils/: checkpoint.py  seed.py
dml/: __init__.py  core.py  trainer.py
dml/utils/: __init__.py  checkpoint.py  eval.py  seed.py
docs/: README.md  api-reference.md  architecture.md  examples.md  getting-started.md
examples/CIFAR-10/: dcl-train.py  pre-train.py
examples/CIFAR-10/test/: dcl-test.py  dml-test.py  pre-train.py
examples/CIFAR-100/: dcl-train.py  pre-train.py
examples/CIFAR-100/test/: dcl-test.py  dml-test.py  pre-train.py
examples/CIFAR10/SimCLR/: disco_train.py  dml_train.py  dogo_train.py  independent_train.py  knn_eval.py  linear_eval.py  losses.py
examples/CIFAR10/SimCLR/models/: simclr_model.py
examples/CIFAR10/SimCLR/runs/independent/resnet18/: events.out.tfevents.1767748751.server-113-107.788325.0  events.out.tfevents.1767759739.server-113-107.909615.0  events.out.tfevents.1767840996.server-113-107.1296536.0  (+2 more)
examples/CIFAR10/SimCLR/utils/: optimizer.py
examples/CIFAR100/: README.md  dcl_search.py  dcl_train.py  dml_train.py  independent_train.py  kd_t2_train.py  kd_train.py  pre_train.py  watch.ipynb
examples/CIFAR100/SimCLR/: transforms.py
examples/CIFAR100/evaluation/: README.md  dcl_test.py  dml_test.py  evaluate_baseline.py  evaluate_dcl.py  evaluate_dml.py  pre_train.py
ktg/: gates.py  graph.py
ktg/models/cifar_models/: __init__.py
ktg/utils/: __init__.py
(+9 files in other folders)
