[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "0.0.1"
name = "dml"
description = "Deep Mutual Learning"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "Yuki Harada", email = "yukiharada1228@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "graphviz>=0.20.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "optuna>=4.5.0",
    "tensorboard>=2.14.0",
    "ipykernel>=6.29.5",
    "pandas>=2.0.3",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["dml"]
